# chardet

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CLAUDE.md  README.md  README.rst  create_language_model.py  prek.toml  pyproject.toml  setup.py  test.py
.claude/skills/: update-benchmarks.md
.claude/skills/update-benchmarks/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml  test.yml
chardet/: __init__.py  chardistribution.py  charsetgroupprober.py  charsetprober.py  encoding_eras.py  enums.py  hebrewprober.py  jpcntx.py  langarabicmodel.py  langbelarusianmodel.py  langbretonmodel.py  langbulgarianmodel.py  langcornishmodel.py  langcroatianmodel.py  langczechmodel.py  langdanishmodel.py  langdutchmodel.py  langenglishmodel.py  langesperantomodel.py  langestonianmodel.py  langfarsimodel.py  langfinnishmodel.py  langfrenchmodel.py  langgermanmodel.py  langgreekmodel.py  langhebrewmodel.py  langhungarianmodel.py  langicelandicmodel.py  langindonesianmodel.py  langirishmodel.py  langitalianmodel.py  langkazakhmodel.py  langlatvianmodel.py  langlithuanianmodel.py  langmacedonianmodel.py  langmalaymodel.py  langmaltesemodel.py  langnorwegianmodel.py  langpolishmodel.py  langportuguesemodel.py  (+21 more)
chardet/cli/: chardetect.py
chardet/metadata/: charsets.py
docs/: changelog.rst  conf.py  contributing.rst  faq.rst  how-it-works.rst  index.rst  performance.rst  requirements.txt  rewrite_performance.md  supported-encodings.rst  supported-mime-types.rst  usage.rst
docs/api/: chardet.rst  index.rst  modules.rst
docs/plans/: 2026-02-21-docs-update-design.md  2026-02-21-docs-update-plan.md  2026-02-24-accuracy-investigation-design.md  2026-02-24-accuracy-investigation-plan.md  2026-02-25-accuracy-improvements-design.md  2026-02-25-accuracy-improvements-plan.md  2026-02-25-chardet-rewrite-design.md  2026-02-25-chardet-rewrite-plan.md  2026-02-26-accuracy-to-95-design.md  2026-02-26-accuracy-to-95-plan.md  2026-02-26-test-perf-accuracy-design.md  2026-02-26-test-perf-accuracy-plan.md  2026-02-27-accuracy-improvements-v2-design.md  2026-02-27-accuracy-improvements-v2-impl.md  2026-02-27-mypyc-optimization-design.md  2026-02-27-mypyc-optimization.md  2026-02-27-parallel-training-design.md  2026-02-27-parallel-training-impl.md  2026-02-28-confusion-group-resolution-design.md  2026-02-28-confusion-group-resolution-plan.md  2026-02-28-docstrings-and-types-design.md  2026-02-28-docstrings-and-types-plan.md  2026-02-28-language-detection-accuracy-design.md  2026-02-28-language-detection-accuracy-plan.md  2026-02-28-perf-doc-update-design.md  2026-02-28-perf-doc-update-plan.md  2026-02-28-statistical-language-inference-design.md  2026-02-28-thread-safety-design.md  2026-02-28-thread-safety-plan.md  2026-02-28-utf8-language-models-design.md  2026-02-28-utf8-language-models-plan.md  2026-03-01-add-cp273-hproman8-utf7-design.md  2026-03-01-add-cp273-hproman8-utf7-plan.md  2026-03-01-documentation-design.md  2026-03-01-documentation-plan.md  2026-03-01-full-python-encoding-coverage-design.md  2026-03-01-full-python-encoding-coverage-plan.md  2026-03-01-registry-languages-design.md  2026-03-01-registry-languages-plan.md  2026-03-02-docs-update-design.md  (+8 more)
docs/superpowers/plans/: 2026-03-11-threaded-benchmark.md  2026-03-19-char-dataset-benchmark.md  2026-03-25-encoding-aware-substitution-filtering.md  2026-03-26-historical-performance-table.md  2026-03-26-restore-pilgrim-history.md
docs/superpowers/specs/: 2026-03-11-threaded-benchmark-design.md  2026-03-19-char-dataset-benchmark-design.md  2026-03-25-encoding-aware-substitution-filtering-design.md  2026-03-26-historical-performance-table-design.md  2026-03-26-restore-pilgrim-history-design.md
scripts/: benchmark.py  benchmark_char_dataset.py  benchmark_memory.py  benchmark_time.py  compare_detectors.py  compare_strict.py  confusion_training.py  data_sources.py  diagnose_accuracy.py  exclusions.py  generate_encoding_table.py  generate_mime_type_table.py  profile_detection.py  substitutions.py  train.py  utils.py  verify_equivalences.py  verify_no_overlap.py
scripts/tests/: test_cache_invalidation.py  test_confusion_training.py  test_data_sources.py  test_exclusions.py  test_train_build.py  test_utils.py  test_verify_no_overlap.py
src/chardet/: __init__.py  __main__.py  _utils.py  cli.py  detector.py  enums.py  equivalences.py  registry.py
src/chardet/_pyinstaller/: __init__.py  hook-chardet.py
src/chardet/models/: __init__.py  training_metadata.yaml
src/chardet/pipeline/: __init__.py  ascii.py  binary.py  bom.py  confusion.py  escape.py  magic.py  markup.py  mess.py  orchestrator.py  statistical.py  structural.py  utf1632.py  utf8.py  validity.py
tests/: conftest.py  test_accuracy.py  test_api.py  test_ascii.py  test_benchmark.py  test_binary.py  test_bom.py  test_cjk_gating.py  test_cli.py  test_confusion.py  test_detector.py  test_enums.py  test_equivalences.py  test_era_tiebreak.py  test_escape.py  test_github_issues.py  test_koi8t.py  test_magic.py  test_markup.py  test_mess.py  test_mime_type.py  test_models.py  test_orchestrator.py  test_pipeline_types.py  test_pyinstaller_hook.py  test_python_stdlib_limitations.py  test_registry.py  test_spec_bom_conformance.py  test_spec_decode_roundtrip.py  test_spec_iana.py  test_spec_whatwg.py  test_statistical.py  test_structural.py  test_substitutions.py  test_thread_safety.py  test_train_build.py  test_utf1632.py  test_utf8.py  test_utils.py  test_validity.py
