[project]
name = "chardet"
version = "6.1.0"
description = "Universal character encoding detector"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

[project.scripts]
chardetect = "chardet.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["tests/data/", "data/"]

[tool.hatch.build.targets.wheel]
packages = ["src/chardet"]

[tool.hatch.build.targets.wheel.hooks.mypyc]
enable-by-default = false
dependencies = ["hatch-mypyc>=0.16.0", "mypy>=1.15"]
require-runtime-dependencies = false
include = [
    "/src/chardet/models/__init__.py",
    "/src/chardet/pipeline/structural.py",
    "/src/chardet/pipeline/validity.py",
    "/src/chardet/pipeline/statistical.py",
]
mypy-args = ["--ignore-missing-imports"]
options = { debug_level = "0" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-m",
    "not benchmark",
]
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "E501",
    # Incompatible pairs
    "D203",   # incompatible with D211
    "D213",   # incompatible with D212
    # Formatter conflict
    "COM812", # trailing comma (ruff formatter handles this)
    # Docstrings (add incrementally later)
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    # Return type annotations (add incrementally later)
    "ANN201",
    "ANN202",
    # Encoding-detection code characteristics
    "PLR2004", # magic value comparison (byte values/thresholds)
    "C901",    # complex structure
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PERF203", # try-except in loop
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # assert is standard in tests
    "S603",    # subprocess security not relevant in tests
    "S607",    # subprocess security not relevant in tests
    "PLW1510", # subprocess.run check not needed in tests
    "T201",    # print is fine in tests
    "PT011",   # pytest.raises broad match acceptable
    "PLC0415", # conditional imports sometimes needed
    "PERF401", # manual list comprehension (readability)
]
"scripts/**" = [
    "T201",    # print is the output mechanism
    "INP001",  # not a package
    "ERA001",  # commented code provides training context
    "EXE001",  # shebang is intentional
    "BLE001",  # blind except (training resilience)
    "PLW2901", # redefined loop variable
    "ARG005",  # unused lambda args (signal handlers)
    "PTH",     # os.path usage fine in scripts
    "RUF003",  # ambiguous unicode (intentional in encoding training)
    "S603",    # subprocess security not relevant
    "S607",    # subprocess security not relevant
    "PLC0415", # conditional imports
    "RUF046",  # unnecessary int cast
    "TRY300",  # try-consider-else style
    "PLR0915", # too many statements
    "FURB122", # f.write in loop (binary packing)
]
"src/chardet/__init__.py" = [
    "FBT001",  # bool params match chardet 6.x public API for backward compat
    "FBT002",  # bool param defaults match chardet 6.x public API
]
"src/chardet/detector.py" = [
    "FBT001",  # bool params match chardet 6.x public API for backward compat
    "FBT002",  # bool param defaults match chardet 6.x public API
]
"src/chardet/cli.py" = [
    "T201",    # CLI prints output to stdout
]
# mypyc-compiled modules cannot use `from __future__ import annotations`
"src/chardet/models/__init__.py" = ["FA100"]
"src/chardet/pipeline/structural.py" = ["FA100"]
"src/chardet/pipeline/validity.py" = ["FA100"]
"src/chardet/pipeline/statistical.py" = ["FA100"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "datasets>=4.6.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.15.2",
]
